--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "main": "server.js",
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node server.js --port=5555"
   },
   "repository": {
     "type": "git",
