change dstuf more

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "url": "git+https://github.com/comp426-2022-fall/a04-ronjoshi-unc.git"
   },
   "author": "@ronjoshi-unc",
-  "license": "GPL-3.0-or-laasdfasdfter",
+  "license": "GPL-3.0-or-later",
   "bugs": {
     "url": "https://github.com/comp426-2022-fall/a04-ronjoshi-unc/issues"
   },
